# kmux

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile
integrations/opencode/: README.md  biome.json  kmux-child-process.test.ts  kmux-child-process.ts  kmux-command-queue.test.ts  kmux-command-queue.ts  kmux-opencode-launcher.test.ts  kmux-opencode-launcher.ts  kmux-select-session.ts  kmux-server-reporter.test.ts  kmux-server-reporter.ts  kmux-status-server.test.ts  kmux-status-server.ts  kmux-status-tui.ts  package.json  tsconfig.json
skills/delegating-with-kmux/: SKILL.md
src/: agents.rs  cli.rs  commands.rs  completions.rs  config.rs  git.rs  launcher.rs  lib.rs  main.rs  paths.rs  project.rs  sidebar.rs  slug.rs  state.rs  telemetry.rs  tmux.rs  workspace.rs
src/agent/: active.rs  directory.rs  mod.rs  observations.rs  query.rs  sessions.rs  sidebar.rs  status.rs  status_badges.rs  test_support.rs  workspace.rs  workspace_activity.rs
src/agent/sidebar/: actions.rs  app.rs  candidates.rs  commands.rs  hooks.rs  lifecycle.rs  mod.rs  model.rs  render.rs  rows.rs  runtime.rs  selection.rs  selection_state.rs  sizing.rs  test_support.rs
src/agent/sidebar/hooks/: diagnostics.rs  mod.rs  runner.rs  selection.rs
src/completions/: bash_dynamic.bash  fish_dynamic.fish  mod.rs  zsh_dynamic.zsh
src/state/: mod.rs  model.rs  sidebar.rs  store.rs  timing.rs  workspace.rs
src/state/agent/: mod.rs  model.rs  store.rs  timing.rs
src/tmux/: resurrect.rs
src/workflows/: add.rs  close.rs  config.rs  context.rs  create.rs  files.rs  launch.rs  list.rs  metadata.rs  mod.rs  open.rs  parent.rs  path.rs  project_session.rs  remove.rs  rename.rs  resolve.rs  restore.rs  set_parent.rs  status.rs  util.rs  window.rs
tests/: agent_status.rs  cli.rs  sidebar.rs  workflows.rs
tests/support/: mod.rs
