[package]
name = "kmux"
version = "0.1.0"
edition = "2024"
description = "Lean tmux and git worktree workflow helper"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
